--- a/assignment-2/assignment-2.html
+++ b/assignment-2/assignment-2.html
@@ -39,5 +39,14 @@ main()
 Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
 
+<div>
+	<button type="button" id="increase-speed">Invader Speed +</button>
+	<button type="button" id="decrease-speed">Invader Speed -</button>
+	<button type="button" id="base-left">Base Left</button>
+	<button type="button" id="base-right">Base Right</button>
+	<button type="button" id="shoot">Shoot</button>
+	<p id=bulltesnum> Number of bullets: 100 </p>
+</div>
+
 </body>
 </html>
