normals not working

--- a/assignment-7/orrery-3d-template.html
+++ b/assignment-7/orrery-3d-template.html
@@ -95,7 +95,7 @@ uniform bool u_UseLighting;
 void
 main()
 {
-    if (!u_UseLighting) {
+    if (!u_UseLighting) {		// orbit
         gl_FragColor = v_fColor;
     }
     else {
